# clastic

./: .gitignore  Makefile.am  README.md  clastic.c  clastic.h  configure.ac
examples/: Makefile.am  test_create_index.c  test_delete_index.c  test_get_by_id.c  test_index_exist.c  test_insert.c  test_put.c  test_remove_index.c
include/: Makefile.am  clastic.h
src/: Makefile.am  clastic.c
